--- a/products_page/products_04.html
+++ b/products_page/products_04.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>資訊視覺化圖文整合 | MILY HSIEH</title>
-    <link rel="stylesheet" href="/css/products.css">
+    <link rel="stylesheet" href="../css/products.css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 </head>
