--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
         <div class="works">
             <a href="products_page/products_03.html">
-                <img src="http://fakeimg.pl/300x250/" alt="">
+                <img src="images/cover/pento.png" alt="">
                 <div class="info">
                     <h2>Pento</h2>
                     <p>網站製作</p>
