--- a/products_page/products_03.html
+++ b/products_page/products_03.html
@@ -27,14 +27,16 @@
     </header>
 
     <main>
-        <article><h1>Pento電商網站</h1>主視覺設計與網頁切版</article>
+        <article>
+            <h1>Pento電商網站</h1>
+            <p>主視覺設計與網頁切版</p>
+            <a href="https://lmwfjb.github.io/Pento/" target="_blank" rel="noopener noreferrer">https://lmwfjb.github.io/Pento/</a>
+        </article>
         
         <ul class="pic">
-            <li><img src="../images/brand/guiji-01.png" alt=""></li>
-            <li><img src="../images/brand/guiji-02.png" alt=""></li>
-            <li><img src="../images/brand/guiji-03.png" alt=""></li>
-            <li><img src="../images/brand/guiji-04.png" alt=""></li>
-            <li><img src="../images/brand/guiji-05.png" alt=""></li>
+            <li><img src="../images/ui/pento-01.png" alt=""></li>
+            <li><img src="../images/ui/pento-02.png" alt=""></li>
+
         </ul>
     </main>
 
