debug(products page)

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 </div>
             </a>
         </div>
-        <div class="works">
+        <!-- <div class="works">
             <a href="products_page/products_12.html">
                 <img src="images/cover/chinese.png" alt="">
                 <div class="info">
@@ -134,17 +134,17 @@
                     <p>書封設計</p>
                 </div>
             </a>
-        </div>
-        <!-- <div class="works">
+        </div> -->
+       <div class="works">
             <a href="products_page/products_13.html">
-                <img src="http://fakeimg.pl/300x250/" alt="">
+                <img src="images/cover/pento-ppt.png" alt="">
                 <div class="info">
-                    <h2>標題13</h2>
-                    <p>內文</p>
+                    <h2>Pento品牌建立企劃書</h2>
+                    <p>簡報設計</p>
                 </div>
             </a>
         </div>
-        <div class="works">
+        <!--  <div class="works">
             <a href="products_page/products_14.html">
                 <img src="http://fakeimg.pl/300x250/" alt="">
                 <div class="info">
