--- a/products_page/products_01.html
+++ b/products_page/products_01.html
@@ -41,7 +41,7 @@
     <footer>© 2020 Hsieh Shih Ting</footer>
 
 
-    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="../js/jquery-3.4.1.min.js"></script>
     <script>
         "use strict"
 
