--- a/products_page/products_13.html
+++ b/products_page/products_13.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MILY HSIEH | 課本內頁設計</title>
+    <title>Pento品牌建立企劃簡報 | MILY HSIEH</title>
     <link rel="stylesheet" href="../css/products.css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
@@ -27,19 +27,17 @@
     </header>
 
     <main>
-        <article><h1>南一書局 高中物理課本</h1>內頁設計</article>
+        <article><h1>Pento品牌建立企劃書</h1>簡報設計</article>
         
         <ul class="pic">
-            <li><img src="../images/layout/science_news-01.png" alt=""></li>
-            <li><img src="../images/layout/science_news-02.png" alt=""></li>
-            <li><img src="../images/layout/science_news-03.png" alt=""></li>
+            <li><img src="../images/layout/pento-ppt.png" alt=""></li>
         </ul>
     </main>
 
     <footer>© 2020 Hsieh Shih Ting</footer>
 
 
-    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="../js/jquery-3.4.1.min.js"></script>
     <script>
         "use strict"
 
