--- a/resume.html
+++ b/resume.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MILY HSIEH | RESUME</title>
     <link rel="stylesheet" href="css/resume.css">
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC:400,500,700,900&display=swap&subset=chinese-traditional" rel="stylesheet"></head>
 </head>
 
 <body>
@@ -22,12 +21,12 @@
 
         <ul class="nav">
             <li><a href="resume.html">RESUME</a></li>
-            <li><a href="index.html">PORTFOLIO</a></li>
+            <li class="link_no_color"><a href="index.html">PORTFOLIO</a></li>
         </ul>
     </header>
 
     <main id="resume">
-        <h1>謝詩婷 <span>Hsieh Shih Ting</span></h1>
+        <h1>謝詩婷 <span>Mily Hsieh</span></h1>
         <article>
             <div class="text-left">
                 <h2>基本資料 Information</h2>
@@ -50,7 +49,7 @@
                 <h2>學經歷 Experience</h2>
                 <h3>2012-2015年 崑山科技大學視覺傳達設計系</h3>
                 <ul>
-                    <li>畢業製作：事毫米（負責主視覺）</li>
+                    <li>畢業製作：事毫米</li>
                     <li>榮獲金點新秀設計獎 大師指定獎</li>
                 </ul>
                 <h3>2015-2017年 南一出版社擔任美術編輯</h3>
@@ -80,7 +79,31 @@
     <script src="js/jquery-3.4.1.min.js"></script>
     <script>
         "use strict"
+        
+        //卷軸上滑出現header區
+        $(document).ready(function () {
+            $.extend({
+                'goAnchor': function (to, time) {
+                    $obj = (window.opera) ? (document.compatMode == "CSS1Compat" ? $('html') : $('body')) : $('html,body');
+                    $($obj).animate({
+                        scrollTop: to
+                    }, time);
+                }
+            });
+        });
+        let bodyClass = document.body.classList,
+            lastScrollY = 0;
+        window.addEventListener('scroll', function () {
+            let st = this.scrollY;
+            if (st < lastScrollY) {
+                bodyClass.remove('hideClose');
+            } else {
+                bodyClass.add('hideClose');
+            }
+            lastScrollY = st;
+        });
 
+        //漢堡選單
         $(".burger-menu").click(function () {
             $(this).toggleClass("menu-on");
             $('header>ul').slideToggle();
