--- a/resume.html
+++ b/resume.html
@@ -81,26 +81,18 @@
         "use strict"
         
         //卷軸上滑出現header區
-        $(document).ready(function () {
-            $.extend({
-                'goAnchor': function (to, time) {
-                    $obj = (window.opera) ? (document.compatMode == "CSS1Compat" ? $('html') : $('body')) : $('html,body');
-                    $($obj).animate({
-                        scrollTop: to
-                    }, time);
+        $(function(){
+            var top1=0;
+            $("header").addClass("on");
+            $(window).scroll(function(){
+                var top2=$(window).scrollTop();
+                if (top2>top1){
+                $("header").removeClass("on")
+                } else {
+                $("header").addClass("on")
                 }
-            });
-        });
-        let bodyClass = document.body.classList,
-            lastScrollY = 0;
-        window.addEventListener('scroll', function () {
-            let st = this.scrollY;
-            if (st < lastScrollY) {
-                bodyClass.remove('hideClose');
-            } else {
-                bodyClass.add('hideClose');
-            }
-            lastScrollY = st;
+                top1=top2;
+            })
         });
 
         //漢堡選單
