--- a/resume.html
+++ b/resume.html
@@ -7,6 +7,7 @@
     <title>MILY HSIEH | RESUME</title>
     <link rel="stylesheet" href="css/resume.css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC:400,500,700,900&display=swap&subset=chinese-traditional" rel="stylesheet"></head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
 </head>
 
 <body>
@@ -20,8 +21,8 @@
         </div>
 
         <ul class="nav">
-            <li><a href="resume.html">RESUME</a></li>
             <li class="link_no_color"><a href="index.html">PORTFOLIO</a></li>
+            <li><a href="resume.html">RESUME</a></li>
         </ul>
     </header>
 
@@ -29,13 +30,13 @@
         <h1>謝詩婷 <span>Mily Hsieh</span></h1>
         <article>
             <div class="text-left">
-                <h2>基本資料 Information</h2>
+                <h2><i class="far fa-user"></i> 基本資料 Information</h2>
                 <ul>
                     <li>1993-02-07</li>
                     <li>hsieh.mily@gmail.com</li>
                     <li>崑山科技大學視覺傳達設計系</li>
                 </ul>
-                <h2>技能 Skills</h2>
+                <h2><i class="fas fa-desktop"></i> 技能 Skills</h2>
                 <ul>
                     <li>HTML / CSS</li>
                     <li>JQuery</li>
@@ -46,26 +47,26 @@
                 </ul>
             </div>
             <div class="text-right">
-                <h2>學經歷 Experience</h2>
+                <h2><i class="far fa-clipboard"></i> 學經歷 Experience</h2>
                 <h3>2012-2015年 崑山科技大學視覺傳達設計系</h3>
-                <ul>
+                <ul class="info">
                     <li>畢業製作：事毫米</li>
                     <li>榮獲金點新秀設計獎 大師指定獎</li>
                 </ul>
                 <h3>2015-2017年 南一出版社擔任美術編輯</h3>
-                <ul>
+                <ul class="info">
                     <li>書籍封面設計</li>
                     <li>內頁編排設計</li>
                     <li>教材周邊產品製作</li>
                 </ul>
                 <h3>2017-2018年 林黑潮診所擔任行銷設計</h3>
-                <ul>
+                <ul class="info">
                     <li>透過網站優化，網路預約提升30%成效</li>
                     <li>社群後台流量及廣告投放分析</li>
                     <li>網站優化</li>
                 </ul>
                 <h3>2019-2020年 接觸網頁前端技術</h3>
-                <ul>
+                <ul class="info">
                     <li>完成職訓局UI/UX介面優化與RWD前端</li>
                     <li>網頁設計實務班，共400小時課程</li>
                 </ul>
