--- a/projects/pento.html
+++ b/projects/pento.html
@@ -29,7 +29,7 @@
         <article>
             <h1>Pento電商網站</h1>
             <p>主視覺設計與網頁切版</p>
-            <a href="https://lmwfjb.github.io/Pento/" target="_blank" rel="noopener noreferrer">https://lmwfjb.github.io/Pento/</a>
+            <a href="https://milyhsieh.github.io/Pento/" target="_blank" rel="noopener noreferrer">https://milyhsieh.github.io/Pento/</a>
         </article>
         
         <ul class="pic">
