--- a/projects/guiji-web.html
+++ b/projects/guiji-web.html
@@ -7,6 +7,7 @@
     <title>桂季 網站製作 | MILY HSIEH</title>
     <link rel="stylesheet" href="../css/projects.css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC:400,500,700,900&display=swap&subset=chinese-traditional" rel="stylesheet"></head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
 <body>
     <header>
         <div class="logo"><a href="../index.html">MILY HSIEH</a></div>
@@ -25,13 +26,12 @@
 
     <main>
         <article>
-            <h1>桂季網站製作</h1>
+            <a href="https://milyhsieh.github.io/Gui-ji/" target="_blank" rel="noopener noreferrer"><h1>桂季網站製作<span><i class="fas fa-link"></i></span></h1></a>
             <p>主視覺設計與網頁切版</p>
-            <a href="https://milyhsieh.github.io/Gui-ji/" target="_blank" rel="noopener noreferrer">https://milyhsieh.github.io/Gui-ji/</a>
         </article>
         
         <ul class="pic">
-            <li><img src="../images/web/guiji-web-01.png" alt=""></li>
+            <li><a href="https://milyhsieh.github.io/Gui-ji/" target="_blank" rel="noopener noreferrer"><img src="../images/web/guiji-web-01.png" alt=""></a></li>
             <li><img src="../images/web/guiji-web-02.png" alt=""></li>
         </ul>
         <a href="../index.html" class="back_btn">回上頁</a>
