--- a/projects/pento.html
+++ b/projects/pento.html
@@ -7,6 +7,7 @@
     <title>Pento網站製作 | MILY HSIEH</title>
     <link rel="stylesheet" href="../css/projects.css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC:400,500,700,900&display=swap&subset=chinese-traditional" rel="stylesheet"></head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
 </head>
 
 <body>
@@ -27,13 +28,12 @@
 
     <main>
         <article>
-            <h1>Pento電商網站</h1>
-            <p>主視覺設計與網頁切版</p>
-            <a href="https://milyhsieh.github.io/Pento/" target="_blank" rel="noopener noreferrer">https://milyhsieh.github.io/Pento/</a>
+            <a href="https://lmwfjb.github.io/Pento/index.html" target="_blank" rel="noopener noreferrer"><h1>Pento電商網站<span><i class="fas fa-link"></i></span></h1></a>
+            <p>主視覺設計與網頁切版</p>    
         </article>
         
         <ul class="pic">
-            <li><img src="../images/web/pento-01.png" alt=""></li>
+            <li><a href="https://lmwfjb.github.io/Pento/index.html" target="_blank" rel="noopener noreferrer"><img src="../images/web/pento-01.png" alt=""></a></li>
             <li><img src="../images/web/pento-02.png" alt=""></li>
         </ul>
         <a href="../index.html" class="back_btn">回上頁</a>
