--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
 
     <section id="portfolio" class="container">
         <div class="works">
+            <a href="projects/whitealley.html">
+                <img src="images/cover/whitealley.png" alt="">
+                <div class="info">
+                    <h2>白巷子官方網站</h2>
+                    <p>網站視覺設計</p>
+                </div>
+            </a>
+        </div>
+
+        <div class="works">
             <a href="projects/guiji-web.html">
                 <img src="images/cover/guiji-web.png" alt="">
                 <div class="info">
@@ -105,7 +115,7 @@
             </a>
         </div>
 
-        <div class="works">
+        <!-- <div class="works">
             <a href="projects/history_textbook.html">
                 <img src="images/cover/history_textbook.png" alt="">
                 <div class="info">
@@ -113,7 +123,7 @@
                     <p>封面設計</p>
                 </div>
             </a>
-        </div>
+        </div> -->
 
         <div class="works">
             <a href="projects/DM-pages.html">
