--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MILY HSIEH | PORTFOLIO</title>
     <link rel="stylesheet" href="css/index.css">
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC:400,500,700,900&display=swap&subset=chinese-traditional" rel="stylesheet"></head>
+    <link
+        href="https://fonts.googleapis.com/css?family=Noto+Sans+TC:400,500,700,900&display=swap&subset=chinese-traditional"
+        rel="stylesheet">
+</head>
 
 <body>
     <header>
@@ -26,10 +29,28 @@
 
     <section id="portfolio" class="container">
         <div class="works">
+            <a href="projects/projects01.html">
+                <img src="images/cover/wj.png" alt="">
+                <div class="info">
+                    <h2>微爵形象美學診所</h2>
+                    <p>網站視覺設計</p>
+                </div>
+            </a>
+        </div>
+        <div class="works">
+            <a href="projects/projects02.html">
+                <img src="images/cover/jf.png" alt="">
+                <div class="info">
+                    <h2>珍福食品</h2>
+                    <p>網站視覺設計</p>
+                </div>
+            </a>
+        </div>
+        <div class="works">
             <a href="projects/whitealley.html">
                 <img src="images/cover/whitealley.png" alt="">
                 <div class="info">
-                    <h2>白巷子官方網站</h2>
+                    <h2>白巷子White Alley</h2>
                     <p>網站視覺設計</p>
                 </div>
             </a>
@@ -64,7 +85,7 @@
                 </div>
             </a>
         </div>
-        
+
         <div class="works">
             <a href="projects/4mm.html">
                 <img src="images/cover/4mm.png" alt="">
@@ -74,7 +95,7 @@
                 </div>
             </a>
         </div>
-        
+
         <div class="works">
             <a href="projects/infographics.html">
                 <img src="images/cover/diet.png" alt="">
@@ -105,7 +126,7 @@
             </a>
         </div>
 
-        <div class="works">
+        <!-- <div class="works">
             <a href="projects/search-medicine.html">
                 <img src="images/cover/find.png" alt="">
                 <div class="info">
@@ -113,7 +134,7 @@
                     <p>書籍設計</p>
                 </div>
             </a>
-        </div>
+        </div> -->
 
         <!-- <div class="works">
             <a href="projects/history_textbook.html">
@@ -126,6 +147,16 @@
         </div> -->
 
         <div class="works">
+            <a href="projects/pento-ptt.html">
+                <img src="images/cover/pento-ppt.png" alt="">
+                <div class="info">
+                    <h2>Pento品牌建立企劃書</h2>
+                    <p>簡報設計</p>
+                </div>
+            </a>
+        </div>
+
+        <div class="works">
             <a href="projects/DM-pages.html">
                 <img src="images/cover/nani_DM.png" alt="">
                 <div class="info">
@@ -135,7 +166,7 @@
             </a>
         </div>
 
-        <div class="works">
+        <!-- <div class="works">
             <a href="projects/DM-math.html">
                 <img src="images/cover/math_DM.png" alt="">
                 <div class="info">
@@ -143,17 +174,7 @@
                     <p>平面設計</p>
                 </div>
             </a>
-        </div>
-
-        <div class="works">
-            <a href="projects/pento-ptt.html">
-                <img src="images/cover/pento-ppt.png" alt="">
-                <div class="info">
-                    <h2>Pento品牌建立企劃書</h2>
-                    <p>簡報設計</p>
-                </div>
-            </a>
-        </div>
+        </div> -->
     </section>
 
 
@@ -166,17 +187,17 @@
         "use strict"
 
         //卷軸上滑出現header區
-        $(function(){
-            var top1=0;
+        $(function () {
+            var top1 = 0;
             $("header").addClass("on");
-            $(window).scroll(function(){
-                var top2=$(window).scrollTop();
-                if (top2>top1){
-                $("header").removeClass("on")
+            $(window).scroll(function () {
+                var top2 = $(window).scrollTop();
+                if (top2 > top1) {
+                    $("header").removeClass("on")
                 } else {
-                $("header").addClass("on")
+                    $("header").addClass("on")
                 }
-                top1=top2;
+                top1 = top2;
             })
         });
 
