--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="MILY HSIEH | PORTFOLIO">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://milyhsieh.github.io/portfolio/">
+    <meta property="og:image" content="images/cover/index-cover.png">
+    <meta property="og:description" content="MILY HSIEH | PORTFOLIO">
     <title>MILY HSIEH | PORTFOLIO</title>
     <link rel="stylesheet" href="css/index.css">
     <link
