--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="MILY HSIEH | PORTFOLIO">
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://milyhsieh.github.io/portfolio/">
-    <meta property="og:image" content="images/cover/index-cover.png">
+    <meta property="og:image" content="https://milyhsieh.github.io/portfolio/images/cover/index-cover.png">
     <meta property="og:description" content="MILY HSIEH | PORTFOLIO">
     <title>MILY HSIEH | PORTFOLIO</title>
     <link rel="stylesheet" href="css/index.css">
